# holons

./: .gitignore  README.md  pyproject.toml
holons/: __init__.py  closure.py  coarse.py  coarse_block.py  defect.py  geometry.py  lenia.py  lenia_collision.py  lenia_stability.py  life.py  matching.py  orbium.py  patterns.py  rules.py  structural.py
paper/: version17_final.tex
results/: closure_eca_relaxation.csv  closure_eca_spectrum.csv  closure_relaxation.csv  closure_robustness.csv  closure_spectrum.csv  collision_spectrum.csv  dissociation_sep08.csv  lenia_collision.csv  lenia_stability.csv  spearman_eca.csv  spearman_life.csv
scripts/: animate_collision.py  closure_relaxation.py  closure_robustness.py  closure_spectrum.py  collision_spectrum.py  dissociation.py  dissociation_grid.py  lenia_collision.py  lenia_collision_contrast.py  lenia_collision_figure.py  lenia_stability.py  plot_collision_spectrum.py  sanity_check.py
viz/: README.md  index.html  package-lock.json  package.json  tsconfig.json  verify.ts  vite.config.ts
viz/src/: golView.ts  leniaView.ts  main.ts  style.css
viz/src/gol/: coarse.ts  defect.ts  life.ts  matching.ts  patterns.ts
viz/src/lenia/: collision.ts  field.ts  lenia.ts  orbium.ts  presets.ts
viz/src/ui/: dom.ts  plot.ts  render.ts
